Fixed visual stretch

--- a/src/style/_components.sass
+++ b/src/style/_components.sass
@@ -24,10 +24,10 @@
       @apply bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded cursor-pointer transition-colors duration-200
 
 .provider-card
-  @apply border border-gray-300 rounded-full text-center cursor-pointer transition-transform duration-200 flex items-center justify-center
+  @apply outline outline-1 outline-gray-300 rounded-full text-center cursor-pointer transition-transform duration-200 flex items-center justify-center
 
 .provider-card.selected
-  @apply border-blue-500 border-2 transform scale-110
+  @apply outline-blue-500 outline-2 transform scale-110
 
 .provider-logo-container
   @apply w-16 h-16 flex items-center justify-center overflow-hidden rounded-full
